# djangoScreenShotAPI

./: .replit  API_USAGE.md  api_routes.py  app.py  db.sqlite3  main.py  manage.py  mockup_service.py  models.py  pyproject.toml  replit.md  run_django.py  screenshot_service.py  some save text
screenshot_generator/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
screenshots/: admin.py  models.py  services.py  tasks.py  urls.py  views.py
screenshots/migrations/: 0001_initial.py  0002_project_creator_id_project_creator_name.py  0003_project_page_delay_project_scroll_delay_and_more.py  0004_alter_project_page_delay_alter_project_scroll_delay.py  0005_alter_project_page_delay_alter_project_scroll_delay.py  0006_alter_project_page_delay_alter_project_scroll_delay.py
screenshots/templates/screenshots/: base.html  index.html  project_detail.html
static/css/: custom.css
static/js/: app.js
templates/: index.html  project_detail.html
